k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: test-task-app
  ports:
  - port: 5000
    targetPort: 5000
